--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@effect/platform": "^0.94.1",
     "@effect/platform-bun": "^0.87.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "effect": "^3.19.14"
   }
 }
